# typhoon-playground

./: .gitignore  LICENSE.md  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic-revision.sh  alembic-upgrade.sh  alembic.ini  docker-compose.yaml  fastapi-start-dev.sh  pyproject.toml  ruff.toml
backend/cli/: __init__.py
backend/cli/template/: schema.py
backend/src/app/: config.py  main.py
backend/src/app/api/: dependencies.py
backend/src/app/api/auth/: route.py  schema.py  service.py
backend/src/app/api/chat/: repo.py  route.py  schema.py  service.py
backend/src/app/api/users/: repo.py  route.py  schema.py  service.py
backend/src/app/core/: auth.py  base_repository.py  base_schema.py  cache.py  exceptions.py  redis.py  security.py
backend/src/app/db/: orm.py  session.py
backend/src/app/db/alembic/: env.py
backend/src/app/db/alembic/versions/: 202412281246_init.py  202412281710_chat.py
backend/src/app/middleware/: auth.py
backend/tests/: conftest.py  test_base_repository.py
frontend/: docker-compose.yaml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/atoms/: Button.tsx  ChatSendButton.tsx  HistoryItem.tsx  Input.tsx  ModelSelect.tsx  Slider.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts
frontend/src/services/: auth.ts  chat.ts
frontend/src/store/: auth.ts  chat.ts  parameters.ts
frontend/src/types/: chat.ts  index.ts  parameters.ts
frontend/src/utils/: api-client.ts  crypto.ts
(+13 files in other folders)
